--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html class="h-full bg-white">
+<html class="h-full bg-white" lang="es">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="title" content="my title">
+  <meta name="description" content="my description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <title>Sistema de Gestión de Inventario</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BBFZ219274"></script>
