--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   <title>Sistema de Gestión de Inventario</title>
 </head>
 
-<body class="h-full">
+<body className="h-full">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
