--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="title" content="my title">
+  <meta name="title" content="Sistema de Gestión de Inventario">
   <meta name="description" content="my description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="" href="" />
   <title>Sistema de Gestión de Inventario</title>
 </head>
 
